deploy: 1a0b337d5fee427c5ef1532e91dffc499e25ddb4

--- a/machine-learning/introduction/history.html
+++ b/machine-learning/introduction/history.html
@@ -1246,7 +1246,7 @@
 <p><strong>First AI Winter</strong>  - promises of AI were exaggerated</p>
 <p>In <strong>1980</strong> the Boom times occurred:</p>
 <ul>
-<li>Commercialization of new AI Expert Systems capable of reproducing human-decision making, through <em>"if-then-else"</em> rules</li>
+<li>Commercialization of new AI Expert Systems capable of reproducing human decision-making, through <em>"if-then-else"</em> rules</li>
 <li>Financial planning, medical diagnosis, geological exploration, and microelectronic circuit design</li>
 </ul>
 <p><strong>Second AI Winter</strong> - many tasks were too complicated for engineers</p>
@@ -1275,7 +1275,7 @@
   <small>
     
       Last update:
-      <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">October 5, 2022 14:32:28</span>
+      <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">January 9, 2023 20:28:16</span>
       
         <br>
         Created:
