--- a/machine-learning/introduction/introduction.html
+++ b/machine-learning/introduction/introduction.html
@@ -1304,7 +1304,7 @@ With machine learning, we refer only to a <a href="https://medium.com/@terdsaksu
 Simulating human intelligence is extremely complex as our brain in an incredibly sophisticated machine, of which we still know few aspects.</p>
 <h2 id="impact-of-ai-in-our-world">Impact of AI in our world</h2>
 <p><img alt="" src="tractica.jpg" /></p>
-<p>For both graphs, we can not the exponential trend and the variety of continents covered. </p>
+<p>For both graphs, we can note the exponential trend and the variety of continents covered. </p>
 <p><em>Information is the oil of 21st century, and analytics is the combustion engine</em></p>
 <p>The number of requests per position as data scientist is constantly increasing as companies need to extract knowledge from data to survive.</p>
 <p>The revolution introduced by AI is reflected also in companies. At least 5 of the top 10 world companies are directly related to AI.
@@ -1317,7 +1317,7 @@ Also, at least 2 companies are directly related to the production of chips, key 
 </ul>
 <p>Nvidia is the leading company in the sector and this is the reason why its shares has risen significantly in recent years.</p>
 <h2 id="the-general-paradigm-of-machine-learning">The General Paradigm of Machine Learning</h2>
-<p><strong>Machine Learning</strong> is a subset of the AI field that tries to develop systems able to automatically learn from specific examples (<em>training data</em>) amd to generalize the knowledge on new samples (<em>testing data</em>) of the same domain.</p>
+<p><strong>Machine Learning</strong> is a subset of the AI field that tries to develop systems able to automatically learn from specific examples (<em>training data</em>) and to generalize the knowledge on new samples (<em>testing data</em>) of the same domain.</p>
 <p>From a practical point of view:</p>
 <ol>
 <li>We have some data which represents our application domain</li>
@@ -1340,7 +1340,7 @@ Also, at least 2 companies are directly related to the production of chips, key 
   <small>
     
       Last update:
-      <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">October 5, 2022 13:28:25</span>
+      <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">January 9, 2023 20:28:16</span>
       
         <br>
         Created:
