--- a/print_page.html
+++ b/print_page.html
@@ -3169,7 +3169,7 @@ With machine learning, we refer only to a <a href="https://medium.com/@terdsaksu
 Simulating human intelligence is extremely complex as our brain in an incredibly sophisticated machine, of which we still know few aspects.</p>
 <h2 id="machine-learning-introduction-introduction-impact-of-ai-in-our-world">Impact of AI in our world</h2>
 <p><img alt="" src="machine-learning/introduction/tractica.jpg" /></p>
-<p>For both graphs, we can not the exponential trend and the variety of continents covered. </p>
+<p>For both graphs, we can note the exponential trend and the variety of continents covered. </p>
 <p><em>Information is the oil of 21st century, and analytics is the combustion engine</em></p>
 <p>The number of requests per position as data scientist is constantly increasing as companies need to extract knowledge from data to survive.</p>
 <p>The revolution introduced by AI is reflected also in companies. At least 5 of the top 10 world companies are directly related to AI.
@@ -3182,7 +3182,7 @@ Also, at least 2 companies are directly related to the production of chips, key 
 </ul>
 <p>Nvidia is the leading company in the sector and this is the reason why its shares has risen significantly in recent years.</p>
 <h2 id="machine-learning-introduction-introduction-the-general-paradigm-of-machine-learning">The General Paradigm of Machine Learning</h2>
-<p><strong>Machine Learning</strong> is a subset of the AI field that tries to develop systems able to automatically learn from specific examples (<em>training data</em>) amd to generalize the knowledge on new samples (<em>testing data</em>) of the same domain.</p>
+<p><strong>Machine Learning</strong> is a subset of the AI field that tries to develop systems able to automatically learn from specific examples (<em>training data</em>) and to generalize the knowledge on new samples (<em>testing data</em>) of the same domain.</p>
 <p>From a practical point of view:</p>
 <ol>
 <li>We have some data which represents our application domain</li>
@@ -3210,7 +3210,7 @@ Also, at least 2 companies are directly related to the production of chips, key 
 <p><strong>First AI Winter</strong>  - promises of AI were exaggerated</p>
 <p>In <strong>1980</strong> the Boom times occurred:</p>
 <ul>
-<li>Commercialization of new AI Expert Systems capable of reproducing human-decision making, through <em>"if-then-else"</em> rules</li>
+<li>Commercialization of new AI Expert Systems capable of reproducing human decision-making, through <em>"if-then-else"</em> rules</li>
 <li>Financial planning, medical diagnosis, geological exploration, and microelectronic circuit design</li>
 </ul>
 <p><strong>Second AI Winter</strong> - many tasks were too complicated for engineers</p>
