deploy: d0faa36b7cacdad310acf4a43b2fd8b59dd19e2d

--- a/data-mining/introduction/data-mining.html
+++ b/data-mining/introduction/data-mining.html
@@ -1453,10 +1453,10 @@ The information resource is a precious asset to overcoming competitors. </p>
 Exploration and analysis, using automated and semi-automatic systems, of large amounts of data in order to find significant patterns through statistics. </p>
 <p>We do not just need to find results, but we need results to be USEFUL. </p>
 <h2 id="analytics">Analytics</h2>
-<p>ANalytics refers to software used to discover, understand and share relevant pattern in data.
+<p>Analytics refers to software used to discover, understand and share relevant pattern in data.
 Analytics are based on the concurrent use of statistics, machine learning and operational research techniques, often exploiting visualization techniques. </p>
 <p><img alt="" src="BI.jpg" /></p>
-<p>Prescriptive systems generale much value but it is extremely complex. Companies should start simple, adopting simple descriptive analytics solutions, and then move on. 
+<p>Prescriptive systems generate much value but it is extremely complex. Companies should start simple, adopting simple descriptive analytics solutions, and then move on. 
 It is risky to skip intermediate steps.</p>
 <h2 id="bi-adoption-path">BI adoption path</h2>
 <p>When we decide to digitalize a company, the adoption of BI solutions is incremental and rarely allows steps to be skipped.
@@ -1495,10 +1495,10 @@ This is because it is risky, costly and useless to adopts advanced solutions bef
 <li>Time series (detection of recurring or atypical patterns in complex data sequences)</li>
 </ul>
 <h2 id="data-mining-applications">Data Mining Applications</h2>
-<p><strong>Predictive Systems</strong>
-Exploit some features to predict the unknown values of other features (classification and regression).</p>
-<p><strong>Descriptive Systems</strong>
-Find user-readable patterns that can be understood by human users (clustering, association rules, sequential patter).</p>
+<p><strong>Predictive Systems</strong></p>
+<p>Exploit some features to predict the unknown values of other features (classification and regression).</p>
+<p><strong>Descriptive Systems</strong></p>
+<p>Find user-readable patterns that can be understood by human users (clustering, association rules, sequential pattern).</p>
 <h2 id="classification-definition">Classification - Definition</h2>
 <p>Given a <strong>record</strong> set, where each record is composed by a set of attributes (one of them represents the class of the record), find a model for the class attribute expressing the attribute value as a function of the remaining attributes.</p>
 <p><em>Given a feature (defined at priori), define weather a user belongs to that feature</em></p>
@@ -1529,8 +1529,8 @@ Predict customers who are willing to go to a competitor.</p>
 <h2 id="clustering-example">Clustering example</h2>
 <p>Given a set of points, each featuring set of attributes, and having a similarity measure between points, find subset of points such that:
 <em>points belonging to a cluster are more similar to each other than those belonging to other clusters</em></p>
-<p><strong>Marketing Segmentation</strong>
-The goal is to spit customers into distinct subsets to target specific marketing activities.</p>
+<p><strong>Marketing Segmentation</strong></p>
+<p>The goal is to split customers into distinct subsets to target specific marketing activities.</p>
 <p>Techniques:</p>
 <ul>
 <li>Gather information about customer lifestyle and geographic location</li>
@@ -1583,7 +1583,7 @@ Suppose you have discovered this association rule:
   <small>
     
       Last update:
-      <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">October 4, 2022 10:38:21</span>
+      <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">January 13, 2023 16:40:26</span>
       
         <br>
         Created:
