deploy: 7935517d4163ad66ab0be600ef1093a287555f9a

--- a/print_page.html
+++ b/print_page.html
@@ -2271,7 +2271,7 @@ Suppose you have discovered this association rule:
 </ul>
 <h2 id="data-mining-introduction-data-mining-crisp-methodology">CRISP methodology</h2>
 <p>A data mining project requires a structured approach in order to choose the best algorithm.</p>
-<p><strong>CRISP-DM</strong> methodology is the most used technique. It is one of the most structures proposals to define the fundamental steps of a data mining project. </p>
+<p><strong>CRISP-DM</strong> methodology is the most used technique. It is one of the most structured proposals to define the fundamental steps of a data mining project. </p>
 <p><img alt="" src="data-mining/introduction/crisp.jpg" /></p>
 <p>The six stages of the life cycle are not strictly sequential, indeed, it is often necessary.</p>
 <ol>
