--- a/data-mining/introduction/data-mining.html
+++ b/data-mining/introduction/data-mining.html
@@ -1556,7 +1556,7 @@ Suppose you have discovered this association rule:
 </ul>
 <h2 id="crisp-methodology">CRISP methodology</h2>
 <p>A data mining project requires a structured approach in order to choose the best algorithm.</p>
-<p><strong>CRISP-DM</strong> methodology is the most used technique. It is one of the most structures proposals to define the fundamental steps of a data mining project. </p>
+<p><strong>CRISP-DM</strong> methodology is the most used technique. It is one of the most structured proposals to define the fundamental steps of a data mining project. </p>
 <p><img alt="" src="crisp.jpg" /></p>
 <p>The six stages of the life cycle are not strictly sequential, indeed, it is often necessary.</p>
 <ol>
@@ -1583,7 +1583,7 @@ Suppose you have discovered this association rule:
   <small>
     
       Last update:
-      <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">January 13, 2023 16:40:26</span>
+      <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">January 13, 2023 16:54:18</span>
       
         <br>
         Created:
