deploy: bd6ce854e96d367ca65e20b66797f7839909d6fd

--- a/data-mining/classifiers/instance-based.html
+++ b/data-mining/classifiers/instance-based.html
@@ -1294,9 +1294,11 @@
 <li>The value of k (the number of neighbors to be used)</li>
 </ul>
 <p>The classification process calculates the distance to the records in the training set, it identifies k nearest neighbors and uses nearest neighbor class labels to determine the class of the unknown record.</p>
-<p>The choice of k is important because:
-- If k is too small, the approach is sensitive to noise
-- If k is too large, the surround may include examples belonging to other classes</p>
+<p>The choice of k is important because:</p>
+<ul>
+<li>If k is too small, the approach is sensitive to noise</li>
+<li>If k is too large, the surround may include examples belonging to other classes</li>
+</ul>
 <p><em>Remember to normalize attributes in pre-processing, because to operate correctly, they should have the same scale of values.</em></p>
 <p><strong>Pros of KNN:</strong></p>
 <ul>
@@ -1324,7 +1326,7 @@
   <small>
     
       Last update:
-      <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">October 11, 2022 10:44:03</span>
+      <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">January 15, 2023 13:58:25</span>
       
         <br>
         Created:
