--- a/print_page.html
+++ b/print_page.html
@@ -2726,9 +2726,11 @@ It can be useful given that the construction approach is greedy.</p>
 <li>The value of k (the number of neighbors to be used)</li>
 </ul>
 <p>The classification process calculates the distance to the records in the training set, it identifies k nearest neighbors and uses nearest neighbor class labels to determine the class of the unknown record.</p>
-<p>The choice of k is important because:
-- If k is too small, the approach is sensitive to noise
-- If k is too large, the surround may include examples belonging to other classes</p>
+<p>The choice of k is important because:</p>
+<ul>
+<li>If k is too small, the approach is sensitive to noise</li>
+<li>If k is too large, the surround may include examples belonging to other classes</li>
+</ul>
 <p><em>Remember to normalize attributes in pre-processing, because to operate correctly, they should have the same scale of values.</em></p>
 <p><strong>Pros of KNN:</strong></p>
 <ul>
